--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-
-
-A_URL= http://192.168.18.32:3000
-SOCKET_A=192.168.18.32:3000
+A_URL= http://ec2-35-153-193-123.compute-1.amazonaws.com:3000
+SOCKET_A=ec2-35-153-193-123.compute-1.amazonaws.com:3000
