--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "^9.12.0",
     "react-native-vector-icons": "^8.1.0",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
