--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 
-
-A_URL= http://192.168.18.32:3000
-SOCKET_A=192.168.18.32:3000
+URL= http://ec2-35-153-193-123.compute-1.amazonaws.com:3000
+SOCKET_URL=ec2-35-153-193-123.compute-1.amazonaws.com:3000
